--- a/templates/admin.html
+++ b/templates/admin.html
@@ -20,26 +20,26 @@
         <tbody>
           {% for post in posts %}
           <tr>
-            <td>{{ post._id }}</td>
+            <td>{{ post.id }}</td>
             <td>{{ post.content }}</td>
             <td>{{ post.status }}</td>
             <td>{{ post.likes }}</td>
             <td>
               {% if post.status != 'approved' %}
               <a
-                href="{{ url_for('approve_post', post_id=post._id) }}"
+                href="{{ url_for('approve_post', post_id=post.id) }}"
                 class="btn btn-success btn-sm"
                 >Approve</a
               >
               {% endif %} {% if post.status != 'denied' %}
               <a
-                href="{{ url_for('deny_post', post_id=post._id) }}"
+                href="{{ url_for('deny_post', post_id=post.id) }}"
                 class="btn btn-warning btn-sm"
                 >Deny</a
               >
               {% endif %}
               <a
-                href="{{ url_for('delete_post', post_id=post._id) }}"
+                href="{{ url_for('delete_post', post_id=post.id) }}"
                 class="btn btn-danger btn-sm"
                 onclick="return confirm('Are you sure you want to delete this post?');"
                 >Delete</a
@@ -69,18 +69,18 @@
         <tbody>
           {% for beach in beaches %}
           <tr>
-            <td>{{ beach._id }}</td>
+            <td>{{ beach.id }}</td>
             <td>{{ beach.name }}</td>
             <td>{{ beach.location }}</td>
             <td>{{ beach.description }}</td>
             <td>
               <a
-                href="{{ url_for('edit_beach', beach_id=beach._id) }}"
+                href="{{ url_for('edit_beach', beach_id=beach.id) }}"
                 class="btn btn-primary btn-sm"
                 >Edit</a
               >
               <a
-                href="{{ url_for('delete_beach', beach_id=beach._id) }}"
+                href="{{ url_for('delete_beach', beach_id=beach.id) }}"
                 class="btn btn-danger btn-sm"
                 onclick="return confirm('Are you sure you want to delete this beach?');"
                 >Delete</a
