--- a/templates/edit_beach.html
+++ b/templates/edit_beach.html
@@ -15,7 +15,7 @@
             {% endif %}
         {% endwith %}
 
-        <form action="{{ url_for('edit_beach', beach_id=beach._id) }}" method="POST" enctype="multipart/form-data">
+        <form action="{{ url_for('edit_beach', beach_id=beach.id) }}" method="POST" enctype="multipart/form-data">
             <!-- Form Fields -->
             <div class="form-group">
                 <label for="name">Beach Name</label>
