--- a/templates/home.html
+++ b/templates/home.html
@@ -96,7 +96,7 @@ block extra_css %}
           </span>
         </p>
         <a
-          href="{{ url_for('beach_detail', beach_id=beach.get('_id', '')) }}"
+          href="{{ url_for('beach_detail', beach_id=beach.id) }}"
           class="btn btn-primary"
           >View Details</a
         >
