--- a/templates/beach_detail.html
+++ b/templates/beach_detail.html
@@ -30,6 +30,7 @@ content %}
           required
         ></textarea>
       </div>
+      <input type="hidden" name="beach_name" value="{{ beach.name }}" />
       <input type="hidden" name="beach_id" value="{{ beach.id }}" />
       <button type="submit" class="btn btn-primary">Post Comment</button>
     </form>
