--- a/templates/edit_beach.html
+++ b/templates/edit_beach.html
@@ -33,6 +33,11 @@
             </div>
 
             <div class="form-group">
+                <label for="description">Description</label>
+                <input type="text" class="form-control" id="description" name="description" value="{{ beach.description }}" required>
+            </div>
+
+            <div class="form-group">
                 <label for="entrocciticount">Enterococci Count</label>
                 <input type="text" class="form-control" id="entrocciticount" name="entrocciticount" value="{{ beach.entrocciticount }}" required>
             </div>
