--- a/templates/add_beach.html
+++ b/templates/add_beach.html
@@ -35,6 +35,16 @@
       />
     </div>
     <div class="form-group mt-3">
+      <label for="description">Description</label>
+      <input
+        type="text"
+        class="form-control"
+        id="description"
+        name="description"
+        required
+      />
+    </div>
+    <div class="form-group mt-3">
       <label for="grade">Grade</label>
       <input
         type="text"
