--- a/static/css/beach.css
+++ b/static/css/beach.css
@@ -418,6 +418,7 @@
     border-left: 2px solid hsla(207, 100%, 83%, 0.451);
     padding-left: 8px;
     margin-bottom: 5px;
+    padding: 5px;
   }
  
   
