--- a/templates/beaches.html
+++ b/templates/beaches.html
@@ -219,7 +219,7 @@
             <div class="card" data="" data-safety="{{ beach.status }}">
                 <!-- Directions Button -->
                 <div class="directions-button">
-                    <a href="https://www.google.com/maps?q={{ beach.latitude }},{{ beach.altitude }}" target="_blank" class="directions-icon">
+                    <a href="https://www.google.com/maps?q={{ beach.latitude }},{{ beach.longitude }}" target="_blank" class="directions-icon">
                         Get Directions <i class="fa fa-location-arrow"></i>
                     </a>
                 </div>
@@ -229,7 +229,7 @@
 
                 <!-- Favorite Pin Icon -->
                 <div class="pin-favorite">
-                    <a href="{{ url_for('favorites', beach_id=beach.id) }}" class="favorite-pin">
+                    <a href="{{ url_for('favorites', beach_id=beach.id, view="beaches") }}" class="favorite-pin">
                         <i class="fa fa-thumbtack"></i>
                     </a>
                 </div>
